docs/envoy/v1.23.10/_sources/intro/arch_overview/security/secpos_robust_to_untrusted_downstream_and_upstream.rst.txt
Extension security: ``robust_to_untrusted_downstream_and_upstream``
===================================================================

* :ref:`envoy.filters.http.decompressor <extension_envoy.filters.http.decompressor>`
* :ref:`envoy.filters.http.set_metadata <extension_envoy.filters.http.set_metadata>`
* :ref:`envoy.filters.network.connection_limit <extension_envoy.filters.network.connection_limit>`
* :ref:`envoy.formatter.metadata <extension_envoy.formatter.metadata>` (alpha)
* :ref:`envoy.formatter.req_without_query <extension_envoy.formatter.req_without_query>` (alpha)
* :ref:`envoy.http.stateful_header_formatters.preserve_case <extension_envoy.http.stateful_header_formatters.preserve_case>`
* :ref:`envoy.internal_redirect_predicates.allow_listed_routes <extension_envoy.internal_redirect_predicates.allow_listed_routes>`
* :ref:`envoy.internal_redirect_predicates.previous_routes <extension_envoy.internal_redirect_predicates.previous_routes>`
* :ref:`envoy.internal_redirect_predicates.safe_cross_scheme <extension_envoy.internal_redirect_predicates.safe_cross_scheme>`
* :ref:`envoy.matching.matchers.ip <extension_envoy.matching.matchers.ip>`
* :ref:`envoy.network.dns_resolver.apple <extension_envoy.network.dns_resolver.apple>`
* :ref:`envoy.network.dns_resolver.cares <extension_envoy.network.dns_resolver.cares>`
* :ref:`envoy.network.dns_resolver.getaddrinfo <extension_envoy.network.dns_resolver.getaddrinfo>`
* :ref:`envoy.regex_engines.google_re2 <extension_envoy.regex_engines.google_re2>`
* :ref:`envoy.request_id.uuid <extension_envoy.request_id.uuid>`
* :ref:`envoy.transport_sockets.alts <extension_envoy.transport_sockets.alts>`
* :ref:`envoy.transport_sockets.starttls <extension_envoy.transport_sockets.starttls>`
* :ref:`envoy.transport_sockets.tcp_stats <extension_envoy.transport_sockets.tcp_stats>` (alpha)
* :ref:`envoy.transport_sockets.tls <extension_envoy.transport_sockets.tls>`
* :ref:`envoy.transport_sockets.upstream_proxy_protocol <extension_envoy.transport_sockets.upstream_proxy_protocol>`
* :ref:`envoy.udp_packet_writer.default <extension_envoy.udp_packet_writer.default>`
* :ref:`envoy.udp_packet_writer.gso <extension_envoy.udp_packet_writer.gso>`